--- a/index.html
+++ b/index.html
@@ -48,30 +48,32 @@
 <div class="banner-widget banner-widget--under-header">
     <ul class="banner-widget__items">
         <li class="banner-widget__item">
-            <img src="images/magento-white.svg" class="banner-widget__image" />
-            <h1 class="banner-widget__title">I'm a Magento Certified Developer</h1>
-            <p class="banner-content">I'm a Magento certified developer from Staffordshire in the Uk.</p>
+            <div class="banner-widget__contents">
+                <img src="images/magento-white.svg" class="banner-widget__image" />
+                <h1 class="banner-widget__title">I'm a Magento Certified Developer</h1>
+                <p class="banner-content">I'm a Magento certified developer from Staffordshire in the UK.</p>
+            </div>
         </li>
 
-        <li class="banner-widget__item" data-sine-color="green">
-            <img src="images/magento-white.svg" class="banner-widget__image" />
-            <h1 class="banner-widget__title">Banner 2</h1>
-            <p class="banner-content">I'm a Magento certified developer from Staffordshire in the Uk.</p>
+        <li class="banner-widget__item" data-sine-color="#01ab31">
+            <div class="banner-widget__contents">
+                <img src="images/magento-white.svg" class="banner-widget__image" />
+                <h1 class="banner-widget__title">Banner 2</h1>
+                <p class="banner-content">I'm a Magento certified developer from Staffordshire in the UK.</p>
+            </div>
         </li>
 
-        <li class="banner-widget__item" data-sine-color="pink">
-            <img src="images/magento-white.svg" class="banner-widget__image" />
-            <h1 class="banner-widget__title">Banner 3</h1>
-            <p class="banner-content">I'm a Magento certified developer from Staffordshire in the Uk.</p>
-        </li>
-
-        <li class="banner-widget__item" data-sine-color="yellow">
-            <img src="images/magento-white.svg" class="banner-widget__image" />
-            <h1 class="banner-widget__title">Banner 4</h1>
-            <p class="banner-content">I'm a Magento certified developer from Staffordshire in the Uk.</p>
+        <li class="banner-widget__item" data-sine-color="#ffa5a5">
+            <div class="banner-widget__contents">
+                <img src="images/magento-white.svg" class="banner-widget__image" />
+                <h1 class="banner-widget__title">Banner 3</h1>
+                <p class="banner-content">I'm a Magento certified developer from Staffordshire in the UK.</p>
+            </div>
         </li>
 
     </ul>
 </div>
+
+
 </body>
 </html>
