--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>TEST</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
-    <link href="https://fonts.googleapis.com/css?family=Arvo:400,400i,700,700i|Bree+Serif|Gentium+Basic|Montserrat|" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
