Parity between browsers

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>TEST</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arimo:400,400i,700|Montserrat" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -20,9 +20,8 @@
             <span class="letter">b</span>
         </div>
         <ul class="nav-primary">
-            <li><a href="#">About</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Playground</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
 
