--- a/article.html
+++ b/article.html
@@ -20,10 +20,10 @@
             <span class="letter">b</span>
         </div>
         <ul class="nav-primary">
-            <li><a href="#">About</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Playground</a></li>
             <li><a href="#">Contact</a></li>
+            <li><a href="#">Astrophotography</a></li>
         </ul>
 
         <div class="nav-secondary">
