--- a/article.html
+++ b/article.html
@@ -19,26 +19,28 @@
             <span class="letter">d</span>
             <span class="letter">b</span>
         </div>
-        <ul class="nav-primary">
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Playground</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Astrophotography</a></li>
-        </ul>
-
-        <div class="nav-secondary">
-            <ul class="icon-bar">
-                <li class="icon-bar--item">
-                    <a href="#" class="icon-bar--link icon icon--no-content twitter-icon"><span>Twitter</span></a>
-                </li>
-                <li class="icon-bar--item">
-                    <a href="#" class="icon-bar--link icon icon--no-content github-icon"><span>Twitter</span></a>
-                </li>
+        <div class="nav-wrapper">
+            <ul class="nav-primary">
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Playground</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Astrophotography</a></li>
             </ul>
-            <div class="search">
-                <form>
-                    <input type="search" placeholder="Search" class="search-input" />
-                </form>
+
+            <div class="nav-secondary">
+                <ul class="icon-bar">
+                    <li class="icon-bar--item">
+                        <a href="#" class="icon-bar--link icon icon--no-content twitter-icon"><span>Twitter</span></a>
+                    </li>
+                    <li class="icon-bar--item">
+                        <a href="#" class="icon-bar--link icon icon--no-content github-icon"><span>Twitter</span></a>
+                    </li>
+                </ul>
+                <div class="search">
+                    <form>
+                        <input type="search" placeholder="Search" class="search-input" />
+                    </form>
+                </div>
             </div>
         </div>
 
