--- a/article.html
+++ b/article.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>TEST</title>
+    <link rel="stylesheet" type="text/css" href="css/normalise.css" />
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
