--- a/article.html
+++ b/article.html
@@ -59,12 +59,12 @@
         <div class="nav-block">
             <h3 class="h3">Recent Posts</h3>
             <ul class="nav-block__list">
-                <li><a href="#">A post probably about Magento</a></li>
-                <li><a href="#">A post probably about Magento</a></li>
-                <li><a href="#">A post probably about Magento</a></li>
-                <li><a href="#">A post probably about Magento</a></li>
-                <li><a href="#">A post probably about Magento</a></li>
-                <li><a href="#">A post probably about Magento</a></li>
+                <li><a href="#">UI Components</a></li>
+                <li><a href="#">Emails - A guide</a></li>
+                <li><a href="#">Something else</a></li>
+                <li><a href="#">It's another Magento post!</a></li>
+                <li><a href="#">A collection of horses</a></li>
+                <li><a href="#">Geese in a tree</a></li>
             </ul>
         </div>
 
