--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </li>
 
-        <li class="banner-widget__item" data-sine-color="#ffa5a5">
+        <li class="banner-widget__item" data-sine-color="#cccccc">
             <div class="banner-widget__contents">
                 <img src="images/magento-white.svg" class="banner-widget__image" />
                 <h1 class="banner-widget__title">Banner 3</h1>
