--- a/index.html
+++ b/index.html
@@ -49,26 +49,27 @@
         <li class="banner-widget__item">
             <div class="banner-widget__contents">
                 <img src="images/magento-white.svg" class="banner-widget__image" />
-                <h1 class="banner-widget__title">I'm a Magento Certified Developer</h1>
-                <p class="banner-content">I'm a Magento certified developer from Staffordshire in the UK.</p>
+                <h1 class="banner-widget__title">I'm a Certified Magento Developer</h1>
+                <p class="banner-content">from Staffordshire in the United Kingdom</p>
             </div>
         </li>
 
         <li class="banner-widget__item" data-sine-color="#01ab31">
             <div class="banner-widget__contents">
-                <img src="images/magento-white.svg" class="banner-widget__image" />
-                <h1 class="banner-widget__title">Banner 2</h1>
-                <p class="banner-content">I'm a Magento certified developer from Staffordshire in the UK.</p>
+                <img src="images/telescope1.svg" class="banner-widget__image" />
+                <h1 class="banner-widget__title">I'm an amateur astronomer</h1>
+                <p class="banner-content">from Earth in the Milky Way</p>
             </div>
         </li>
 
-        <li class="banner-widget__item" data-sine-color="#cccccc">
-            <div class="banner-widget__contents">
-                <img src="images/magento-white.svg" class="banner-widget__image" />
-                <h1 class="banner-widget__title">Banner 3</h1>
-                <p class="banner-content">I'm a Magento certified developer from Staffordshire in the UK.</p>
-            </div>
-        </li>
+
+        <!--<li class="banner-widget__item" data-sine-color="#cccccc">-->
+            <!--<div class="banner-widget__contents">-->
+                <!--<img src="images/magento-white.svg" class="banner-widget__image" />-->
+                <!--<h1 class="banner-widget__title">Banner 3</h1>-->
+                <!--<p class="banner-content">I'm a Magento certified developer from Staffordshire in the UK.</p>-->
+            <!--</div>-->
+        <!--</li>-->
 
     </ul>
 </div>
